--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -46,6 +46,8 @@
                         <div class="main__community-sec">
                             <p class="large sbold">{{center.organization_name}}</p>
                             <p>11 Projects, {{center.community_member_set.count}} Members</p>
+                            <a href="center/{{center.organization_name_slug}}/signup" class="btn btn--border">Join as a
+                                Contributor</a>
                         </div>
                     </div>
                     {% endfor %}
