--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -46,7 +46,7 @@
                         <div class="main__community-sec">
                             <p class="large sbold">{{center.organization_name}}</p>
                             <p>11 Projects, {{center.community_member_set.count}} Members</p>
-                            <a href="center/{{center.organization_name_slug}}/signup" class="btn btn--border">Join as a
+                            <a href="center/{{center.organization_name_slug}}/signup"  class="btn btn--border" class ="center_contrib"  >Join as a
                                 Contributor</a>
                         </div>
                     </div>
@@ -108,7 +108,7 @@
                                     <p class="large sbold">{% if contributor.organization_id %} {{contributor.organization_id}}  {%endif%}</p>
                                 </td>
                                 <td>
-                                    <p class="large sbold">{{contributor.project}}</p>
+                                    <p class="large sbold">{% if community.project %} {{contributor.project}} {%endif%}</p>
                                 </td>
                             </tr>
                             {% endif %}
