--- a/templates/HFC/center_contributor_signup.html
+++ b/templates/HFC/center_contributor_signup.html
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                     <div class="form-control">
-                        <div class="form-field">
+                        <div class="form-field" style="margin-bottom: 5px;">
                             <label for="">Area of Expertise</label>
                         </div>
                     </div>
