Adding Suman to the team

--- a/templates/HFC/about.html
+++ b/templates/HFC/about.html
@@ -86,11 +86,11 @@
                         </div>
                         <div class="about-team__sec">
                             <div class="about-team__fig">
-                                <img width="100" src="{% static 'images/saurabh.png' %}" alt="Saurabh Kumar">
+                                <img width="100" src="{% static 'images/suman.png' %}" alt="Suman Tyaagi">
                             </div>
                             <div class="about-team__info">
-                                <h4>Saurabh Kumar<span>Engineering</span></h4>
-                                <p>Leads the development for projects launched on hackforchange platform</p>
+                                <h4>Suman Tyaagi<span>Community Outreach</span></h4>
+                                <p>Getting people inspired and joining hands to work together on our platform</p>
                             </div>
                         </div>
                         <div class="about-team__sec">
