--- a/templates/HFC/areaofexpertise.html
+++ b/templates/HFC/areaofexpertise.html
@@ -1,9 +1,11 @@
-<html>
 
+<html>
+    
 <body>
     {% for expertise in expertises %}
-    <input type="checkbox" name="area_of_expertise" value="{{expertise.pk}}" id="id_area_of_expertise" >
-    <label for="">{{expertise.expertise }} </label>
+    <input type="checkbox" name="area_of_expertise"  value="{{expertise.pk}}" id="id_area_of_expertise" />
+    <label for="checkbox"  >{{expertise.expertise }}</label>
+
     {%endfor%}
 
 </body>
