screening page modified

--- a/templates/HFC/mentor_signup.html
+++ b/templates/HFC/mentor_signup.html
@@ -97,7 +97,7 @@
                     </div>
                     <div class="form-control">
                         <div class="form-field" style="margin-bottom: 5px;">
-                            <label for="">Area of Expertise</label>
+                            <label for="">Areas of Expertise</label>
                         </div>
 
                     </div>
