--- a/templates/ScreeningApp/screening.html
+++ b/templates/ScreeningApp/screening.html
@@ -33,7 +33,7 @@
                     {%csrf_token%}
                     {% for question in questions %}
                     {%for i in question.question.all%}
-                    <div class="form-field">
+                    <div class="form-field" style="margin-bottom: 5px;">
                         <label for="">{{forloop.parentloop.counter}}. {{i.question}}</label>
                     </div>
                     <input type="radio" id={{i.question_id}} name={{question.id}} value="option_1">
@@ -88,3 +88,17 @@
 </div>
 </div>
 {%endblock%}
+{% block js%}
+<script type="text/javascript">
+    $(document).ready(function () {
+        //Disable full page
+        $("body").bind("cut copy paste", function (e) {
+            console.log("sambit");
+            e.preventDefault();
+        });
+        
+   
+        
+    });
+</script>
+{% endblock %}
