--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -45,7 +45,7 @@
                                 alt="Logo"></div>
                         <div class="main__community-sec">
                             <p class="large sbold">{{center.organization_name}}</p>
-                            <p>11 Projects, {{center.community_member_set.count}} Members</p>
+                            <p>{{center.project.count}} Projects, {{center.community_member_set.count}} Members</p>
                             <a href="center/{{center.organization_name_slug}}/signup" class="btn btn--hfc"
                                 id="center_contrib">Join as a
                                 Contributor</a>
@@ -71,7 +71,7 @@
                                 alt="Logo"></div>
                         <div class="main__community-sec">
                             <p class="large sbold">{{chapter.organization_name}}</p>
-                            <p>11 Projects, {{chapter.community_member_set.count}} Members</p>
+                            <p>{{chapter.project.count}} Projects, {{chapter.community_member_set.count}} Members</p>
                             <a href="{{chapter.organization_name_slug}}/signup" class="btn btn--border">Join as a
                                 Contributor</a>
                         </div>
