--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -18,13 +18,11 @@
 
                 <iframe name="formaReturning" style="display:none !important;" frameborder="0"></iframe>
                 <!--End mc_embed_signup-->
-                
-                    <p id="thankYouMessage" style="display:none;font-size: 8px;">Successfully subscribed to the hackforchange newsletter.</p>
-                
+
+                <p id="thankYouMessage" style="display:none;font-size: 8px;">Successfully subscribed to the
+                    hackforchange newsletter.</p>
             </div>
         </div>
-        
-    
     </div>
 </div>
 
