Community member page modified

--- a/templates/HFC/community_member.html
+++ b/templates/HFC/community_member.html
@@ -17,7 +17,7 @@
         <div class="banner__main">
             <h1>Signup as a Community Member</h1>
             <p class="large">
-                Inviting working professionals from various cities to join as community member
+                Inviting working professionals from various cities to join our community
             </p>
         </div>
     </div>
@@ -28,8 +28,8 @@
     <div class="content-width">
         <div class="main">
             <section id="contents">
-                <div class="uni-chapter">
-                    <h2>Hack For Change Community</h2>
+                <div class="uni-chapter"><img width="84px" src="{% static 'images/hfc-small.png' %}">
+                    <h2>Join Our Community</h2>
                 </div>
 
                 <form class="site-form" method="post" id="volform" sub-change-url="{% url 'load_area_of_expertise' %}">
