--- a/templates/HFC/layout.html
+++ b/templates/HFC/layout.html
@@ -69,7 +69,7 @@
                                     </ul>
                                 </div>
                             </li>
-                            <li><a class="btn btn--info" href="{% url 'mentor_signup' %}">Signup as a Mentor</a></li>
+                            <li><a class="btn btn--info" href="{% url 'community_member_signup' %}">Signup as a Member</a></li>
                         </ul>
                     </div>
                 </header>
