--- a/templates/HFC/problem_statements_submit.html
+++ b/templates/HFC/problem_statements_submit.html
@@ -50,8 +50,8 @@
                         <label for="">Related Links</label>
                         {{form.related_link}}
                     </div>
-                    <div class="form-field">
-                        <label for="">Issue Area</label>
+                    <div class="form-field" style="margin-bottom: 5px;">
+                        <label for="">Issue Areas</label>
                     </div>
                     <div>
                         {{form.issue_area}}
