--- a/templates/HFC/screening_email.html
+++ b/templates/HFC/screening_email.html
@@ -332,7 +332,7 @@
           <div class="header">
             <table role="presentation" border="0" cellpadding="0" cellspacing="0">
               <tr>
-                <td class="align-center">
+                <td class="align-center"><img src="https://www.hackforchange.co.in/static/images/logo.png" width="60" height="50">
                 </td>
               </tr>
             </table>
@@ -370,7 +370,7 @@
                           </tbody>
                         </table>
                         <p>Best,<br>
-                        <img src="https://www.hackforchange.co.in/static/images/logo.png" width="60" height="50"><br>Core Team</p>
+                        HFC Core Team</p>
                       </td>
                     </tr>
                   </table>
