--- a/templates/HFC/projects_list.html
+++ b/templates/HFC/projects_list.html
@@ -19,6 +19,7 @@
         <div class="banner__main">
             <h1>Projects</h1>
             <p class="large">Ongoing solutions designed and developed to empower citizens</p>
+            <a class="btn btn--info" href="{% url 'mentor_signup' %}">Signup as a Mentor</a>
         </div>
     </div>
 </div>
