--- a/templates/HFC/center_contributor_signup.html
+++ b/templates/HFC/center_contributor_signup.html
@@ -108,7 +108,7 @@
                     <ul class="sidebar__member">
                         {% for contributor in contributors%}
                         {% if contributor.image %}
-                        <li><img src={{contributor.image.url}} alt="Pic" style="width:100%;height:90%;"></li>
+                        <li><a href="{{contributor.linkedin_profile}}" target="_blank"><img src={{contributor.image.url}} alt="{{contributor.name}}"></a></li>
                         {% endif %}
                         {%endfor%}
                     </ul>
@@ -142,6 +142,9 @@
 {%endblock%}
 {% block js %}
 <script>
+    $(function () {
+    $("#id_profession").change();
+    });
     $("#id_profession").change(function () {
         var url = $("#volform").attr("sub-change-url");
         console.log(url)
