--- a/templates/HFC/mentor_signup.html
+++ b/templates/HFC/mentor_signup.html
@@ -32,7 +32,7 @@
                     <div class="leader-skill__left">
                         <p class="large bold">Must Have Skills</p>
                         <ul>
-                            <li>10+ years of industry experience</li>
+                            <li>5+ years of industry experience</li>
                             <li>Ability to guide and lead</li>
                             <li>Strong systems & engineering knowledge</li>
                             <li>Good written & verbal communication skills</li>
@@ -153,6 +153,9 @@
 {%endblock%}
 {% block js %}
 <script>
+    $(function () {
+    $("#id_profession").change();
+    });
     $("#id_profession").change(function () {
         var url = $("#volform").attr("sub-change-url");
         console.log(url)
