--- a/templates/HFC/contact.html
+++ b/templates/HFC/contact.html
@@ -44,7 +44,7 @@
                         <address><i class="fas fa-map-marker-alt"></i>402 Abhis Hiranya <br>Kavuri Hills, Madhapur
                             <br>Hyderabad - 500 033</address>
                         <p><a href="mailto:contact@hackforchange.co.in"><i
-                                    class="fas fa-envelope"></i>contact@hackforchange.co</a></p>
+                                    class="fas fa-envelope"></i>contact@hackforchange.co.in</a></p>
                         <p><a href="tel:+919963362872"><i class="fas fa-phone-alt"></i>+91 99633 62872</a></p>
                     </div>
                     <img width="288" src="{% static 'images/email-campaign-rafiki.svg' %}"
