--- a/templates/HFC/hfc_home.html
+++ b/templates/HFC/hfc_home.html
@@ -107,6 +107,8 @@
                 <div class="we-work__fig"><img src="{% static 'images/faq-logo.svg' %}" srcset="images/faq-logo@2x.png 2x, images/faq-logo@3x.png 3x"></div>
                 <div class="we-work__fig"><img src="{% static 'images/fdr-logo.svg' %}" srcset="images/fdr-logo@2x.png 2x, images/fdr-logo@3x.png 3x"></div>
                 <div class="we-work__fig"><img src="{% static 'images/md-logo.svg' %}" srcset="images/md-logo@2x.png 2x, images/md-logo@3x.png 3x"></div>
+                <div class="we-work__fig"><img src="{% static 'images/ghmc-logo.png' %}"  width="140px" height="140px" srcset="images/md-logo@2x.png 2x, images/md-logo@3x.png 3x"></div>
+                
             </div>
             <p>Reach out to us, if you think your organization can leverage our help? <a href="{% url 'contact' %}">Send
                     us a note</a></p>
