--- a/templates/HFC/mentor_welcome_email.html
+++ b/templates/HFC/mentor_welcome_email.html
@@ -11,9 +11,9 @@
         <tr>
           <td>
             <p>Dear {{name}},</p>
-            <p>Thank you for signing up to become a contributor. For us to get you involved in the right project, 
-               we want to understand your capabilities better.</p>
-            <p>Please take a minute to take the screening, so that we can get started.</p>
+            <p>Thank you for signing up to become a mentor. One of our core team members, 
+                will review your profile and reach out to you directly.</p>
+            <p>In the meanwhile we encourage you to review our ongoing projects and also related documentation.</p>
               <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
               <tbody>
                   <tr>
@@ -21,7 +21,7 @@
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                            <tbody>
                               <tr>
-                              <td> <a href="{{base_url}}{{screeninguuid}}" target="_blank">Link to screening</a> </td>
+                              <td> <a href="" target="_blank">Link to our projects</a> </td>
                                     
                               </tr>
                             </tbody>
@@ -31,7 +31,8 @@
                     </tbody>
                   </table>
                   <p>Best,<br>
-                  HFC Core Team</p>
+                    Suman Tyaagi<br>
+                    For HackForChange</p>
                 </td>
               </tr>
             </table>
