Rss feeds added to blog

--- a/templates/HFC/admin_email_form.html
+++ b/templates/HFC/admin_email_form.html
@@ -38,7 +38,7 @@
             <p>{{ form.message.label_tag }}</p>
             <p>{{ form.message }}</p>
         </div>
-        <input type="submit" value="submit" />
+        <input type="submit" value="Send Email" />
         <a href="{% url 'admin:HFCCore_community_member_changelist' %}" class="button cancel-link">{% trans "No, take me back" %}</a>
     </div>
 </form>
